--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Landing Page!</title>
+    <title>Eco-Tangible</title>
 </head>
 <body>
-    <p>Well fuck me it works!</p>
-    <dir id='demo'></dir>
+    <dir id='demo'>
+        <p>Well fuck me it works!</p>
+    </dir>
     <dir id='webgl'></dir>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="./js/lib/three.min.js"></script>
-    <script type="text/javascript" src="js/lib/TrackballControls.js"></script>
+    <script type="text/javascript" src="./js/lib/TrackballControls.js"></script>
     <script type="text/javascript" src="./js/lib/d3.min.js"></script>
-    <script type="text/javascript" src="./js/app/blueIsland.js" onload="Start()"></script>
     <script type="text/javascript">
 
         var count = 0;
@@ -25,9 +25,7 @@
             ticker.text(count + " " + data);
         })
 
-
-
-
     </script>
+    <script type="text/javascript" src="./js/app/blueIsland.js" onload="Start()"></script>
 </body>
 </html>
