added flood layer. Need to do a better job managing data. will try interpolating data to higher resolution BEFORE rendering. That way we can simply call the 'slice of interest'

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
     <title>Eco-Tangible</title>
 </head>
 <body>
-    <dir id='demo'>
-        <p>Well fuck me it works!</p>
-    </dir>
-    <dir id='webgl'></dir>
+    <div id='demo'>
+        <button type="button" id="add">+</button>
+        <button type="button" id="subtract">-</button>
+        <p>Time Point is: </p>
+    </div>
+    <div id='webgl'></div>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="./js/lib/three.min.js"></script>
     <script type="text/javascript" src="./js/lib/TrackballControls.js"></script>
