--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <button type="button" id="subtract">-</button>
         <p>Time Point is: </p>
     </div>
+    <svg id="fillgauge1" width="100" height="100"></svg>
     <div id='webgl'></div>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="./js/lib/three.min.js"></script>
